--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
-    "formidable": "^1.2.2"
+    "formidable": "^1.2.2",
+    "iconv-lite": "^0.6.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
