--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "formidable": "^1.2.2",
-    "iconv-lite": "^0.6.2"
+    "iconv-lite": "^0.6.2",
+    "pg": "^8.3.3"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
